@@ -297,16 +297,16 @@ minibuffer."
 
 ;;; Main logic
 
-(defvar merlin-eldoc--max-lines merlin-eldoc-max-lines
+(defvar-local merlin-eldoc--max-lines merlin-eldoc-max-lines
   "Local copy of `merlin-eldoc-max-lines' adjusted to follow eldoc config.")
 
-(defvar merlin-eldoc--max-lines-type merlin-eldoc-max-lines-type
+(defvar-local merlin-eldoc--max-lines-type merlin-eldoc-max-lines-type
   "Local copy of `merlin-eldoc-max-lines-type' adjusted to follow max lines.")
 
-(defvar merlin-eldoc--max-lines-doc merlin-eldoc-max-lines-doc
+(defvar-local merlin-eldoc--max-lines-doc merlin-eldoc-max-lines-doc
   "Local copy of `merlin-eldoc-max-lines-doc' adjusted to follow max lines.")
 
-(defvar merlin-eldoc--max-lines-fun-args
+(defvar-local merlin-eldoc--max-lines-fun-args
   merlin-eldoc-max-lines-function-arguments
   "Local copy of `merlin-eldoc-max-lines-function-arguments' adjusted to follow max lines.")
 
@@ -466,6 +466,40 @@ The value returned is one of:
                        (t nil))))
     (if output (merlin-eldoc--fontify output))))
 
+(defvar-local merlin-eldoc--last-occurrences nil
+  "List of bounds of the form (START . END) for the last symbol that had occurrences.")
+
+(defvar-local merlin-eldoc--last-occurrence-index nil
+  "Index of the last occurrence visited in `merlin-eldoc--last-occurrences'.")
+
+(defun merlin-eldoc--store-occurrences (occurrences)
+  "Store OCCURRENCES and current position.
+
+OCCURRENCES must be a list of BOUNDS (of the form (START . END)).
+
+This function updates the content of
+`merlin-eldoc--last-occurences' and
+`merlin-eldoc--last-occurrence-index'.
+
+Occurrences and position are meant to be used by
+`merlin-eldoc-jump-to-prev-occurrence' and
+`merlin-eldoc-jump-to-next-occurrence'."
+  (setq-local merlin-eldoc--last-occurrences (vconcat occurrences))
+  (setq-local merlin-eldoc--last-occurrence-index nil)
+  (let ((point (point))
+        (found-p nil)
+        (i 0)
+        (len (length merlin-eldoc--last-occurrences)))
+    (while (and (not found-p) (< i len))
+      (let* ((bounds (aref merlin-eldoc--last-occurrences i))
+             (begin (car bounds))
+             (end (cdr bounds)))
+        (when (and (>= point begin)
+                   (<= point end))
+          (setq-local merlin-eldoc--last-occurrence-index i)
+          (setq found-p t))
+        (setq i (1+ i))))))
+
 (defun merlin-eldoc--occurrences ()
   "Produce list of BOUNDS (of the form (START . END)) of occurrences of the symbol at point."
   (merlin/call "occurrences"
@@ -485,9 +519,12 @@ The value returned is one of:
   "Create an overlay on all the occurences of symbol at point."
   (when merlin-eldoc-occurrences
     (merlin-eldoc--unhighlight-occurrences)
-    (dolist (occ (merlin-eldoc--occurrences))
-      (merlin-eldoc--highlight-occurrence
-       (merlin--make-bounds occ) 'merlin-eldoc-occurrences-face))))
+    (let* ((occurrences (merlin-eldoc--occurrences))
+           (bounds (mapcar #'merlin--make-bounds occurrences)))
+      (dolist (occ bounds)
+        (merlin-eldoc--highlight-occurrence occ
+                                            'merlin-eldoc-occurrences-face))
+      (merlin-eldoc--store-occurrences bounds))))
 
 (defun merlin-eldoc--on-overlay-p (id)
   "Return whether point is on a tide overlay of type ID."
@@ -568,6 +605,28 @@ The value returned is one of:
           ((merlin-eldoc--valid-fun-args-position-p (point))
            (merlin-eldoc--gather-fun-args))
           (t nil))))
+
+(defun merlin-eldoc-jump-to-prev-occurrence ()
+  "Jump to prev occurrence of value at point."
+  (interactive)
+  (when merlin-eldoc--last-occurrence-index
+    (let* ((i merlin-eldoc--last-occurrence-index)
+           (i (1- i))
+           (i (if (>= i 0) i (1- (length merlin-eldoc--last-occurrences))))
+           (bounds (aref merlin-eldoc--last-occurrences i)))
+      (setq-local merlin-eldoc--last-occurrence-index i)
+      (goto-char (car bounds)))))
+
+(defun merlin-eldoc-jump-to-next-occurrence ()
+  "Jump to next occurrence of value at point."
+  (interactive)
+  (when merlin-eldoc--last-occurrence-index
+    (let* ((i merlin-eldoc--last-occurrence-index)
+           (i (1+ i))
+           (i (if (< i (length merlin-eldoc--last-occurrences)) i 0))
+           (bounds (aref merlin-eldoc--last-occurrences i)))
+      (setq-local merlin-eldoc--last-occurrence-index i)
+      (goto-char (car bounds)))))
 
 ;;;###autoload
 (defun merlin-eldoc-setup ()
