@@ -4,6 +4,8 @@ All notable changes to this project will be documented in this file.
 
 ** Unreleased
 
+   - Add ~merlin-eldoc-jump-to-{prev,next}-occurrence~ functions.
+
 ** 1.2 - [2018-05-14 Mon]
 
    - Don't display anything when the point is in an area marked as an
